<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:layout_margin="@dimen/margin_layout">

    <TextView
        android:id="@+id/textview_title"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout_type"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_standard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_standard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_title">

        <TextView
            android:id="@+id/textview_type"
            android:text="@string/type"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/radio_group_type"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_button_integer"
                android:text="@string/integer"
                android:padding="@dimen/margin_standard"
                android:layout_margin="@dimen/margin_standard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/radio_button_real"
                android:text="@string/real"
                android:padding="@dimen/margin_standard"
                android:layout_margin="@dimen/margin_standard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_distribution"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_standard"
        android:padding="@dimen/padding_standard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_layout_type">

        <TextView
            android:id="@+id/textview_distribution_label"
            android:text="@string/distribution"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/radio_group_distribution"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_button_uniform"
                android:text="@string/uniform"
                android:textAllCaps="false"
                android:padding="@dimen/padding_standard"
                android:layout_margin="@dimen/margin_standard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/radio_button_normal"
                android:text="@string/normal"
                android:padding="@dimen/padding_standard"
                android:layout_margin="@dimen/margin_standard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/button_save"
        android:text="@string/save"
        android:layout_width="180dp"
        android:layout_height="60dp"
        style="@android:style/Widget.Material.Button.Colored"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>